<?xml version="1.0"?>
<package>
  <name>posest_frontend</name>
  <version>0.0.0</version>
  <description>The frontend for 6D pose estimation</description>
  <maintainer email="theo.gieruc@epfl.ch">Théo Gieruc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>quad_msg</build_depend>
  <build_depend>sensor_msg</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>quad_msg</run_depend>
  <run_depend>sensor_msg</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
